<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appname">朝夕</string>
    <string name="version">Version 1.0.0</string>
    <string name="username_sample">未登录</string>
    <!--设置相关-->
    <string name="activity_setting_title">设置</string>
    <string name="entry_account">帐号安全</string>
    <string name="entry_notification">消息通知</string>
    <string name="entry_privacy">隐私</string>
    <string name="entry_general">通用</string>
    <string name="entry_help">使用指南</string>
    <string name="entry_feedback">意见反馈</string>
    <string name="entry_check_update">检查更新</string>
    <string name="entry_about">关于APP</string>
    <string name="entry_close_app">关闭应用</string>
    <string name="entry_logout">退出登录</string>
    <!--账号安全-->
    <string name="entry_change_password">修改密码</string>
    <string name="entry_change_phone">修改手机号</string>
    <string name="entry_bind_wechat">绑定微信</string>
    <string name="entry_unbind_wechat">解绑微信</string>
    <string name="entry_cancelaccount">注销帐号</string>
    <!--消息通知-->
    <string name="switch_recommend">推送消息</string>
    <string name="switch_system_notification">系统通知</string>
    <string name="switch_new_follower">被关注</string>
    <string name="switch_new_thumbup">被点赞</string>
    <string name="switch_new_collection">被收藏</string>
    <string name="switch_following_new_content">关注的人</string>
    <string name="switch_place_new_content">关注的地点</string>
    <string name="switch_topic_new_content">关注的话题</string>
    <!--隐私设置-->
    <string name="switch_showmylocation">公开我的位置</string>
    <string name="switch_personalized_recommendation">个性化推荐</string>
    <string name="switch_allowstrangermessages">接收陌生人的私信</string>
    <string name="entry_blacklist">黑名单管理</string>
    <string name="entry_uninterested">不感兴趣列表</string>
    <!--通用设置-->
    <string name="switch_auto_daynight">深色模式跟随系统</string>
    <string name="entry_language">语言</string>
    <string name="language_default">跟随系统</string>
    <string name="language_simplified_chinese">简体中文</string>
    <string name="language_traditional_chinese">繁體中文</string>
    <string name="language_english">English</string>
    <!--关于APP-->
    <string name="entry_update_history">更新日志</string>
    <string name="entry_privacy_policy">隐私政策</string>
    <string name="entry_service_terms">用户协议</string>
    <string name="entry_opensource">开发者与开源协议</string>
    <string name="entry_third_party">第三方信息收集清单</string>
    <string name="cd_jump_to_map">跳转到地图</string>
    <string name="cd_entry_item_icon">图标</string>
    <string name="cd_icon_text_item_icon">图标</string>
    <string name="cd_input_item_left_icon">左侧图标</string>
    <string name="cd_input_item_right_icon">右侧图标</string>
    <string name="cd_titlebar_left_button">标题栏左侧图标</string>
    <string name="cd_titlebar_right_button">标题栏右侧图标</string>
    <string name="search_hot_tag">热门搜索</string>
    <string name="search_history_tag">搜索历史</string>
    <string name="search_history_clear">清除全部</string>
</resources>