<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cloudchewie.ui.TitleBar
        android:id="@+id/notification_settings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:right_button_visibility="false"
        app:title="@string/entry_notification" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/notification_settings_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/notification_settings_titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/notification_settings_titlebar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/system_notification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_recommend"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_title="@string/switch_recommend"
                    app:checkbox_item_top_radius_enable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_system_notification"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_bottom_radius_enable="true"
                    app:checkbox_item_title="@string/switch_system_notification"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_recommend" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/objective_notification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/system_notification_layout">

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_new_follower"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_title="@string/switch_new_follower"
                    app:checkbox_item_top_radius_enable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_new_thumbup"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_title="@string/switch_new_thumbup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_new_follower" />

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_new_collection"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_bottom_radius_enable="true"
                    app:checkbox_item_title="@string/switch_new_collection"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_new_thumbup" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/subjective_notification_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/objective_notification_layout">

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_following_new_content"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_title="@string/switch_following_new_content"
                    app:checkbox_item_top_radius_enable="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_place_new_content"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_title="@string/switch_place_new_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_following_new_content" />

                <com.cloudchewie.ui.CheckBoxItem
                    android:id="@+id/switch_topic_new_content"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    app:checkbox_item_bottom_radius_enable="true"
                    app:checkbox_item_title="@string/switch_topic_new_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switch_place_new_content" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</RelativeLayout>