<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cloudchewie.client.ui.TitleBar
        android:id="@+id/privacy_settings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:right_button_visibility="false"
        app:title="@string/entry_privacy" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/privacy_settings_titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/general_privacy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.cloudchewie.client.ui.CheckBoxItem
                android:id="@+id/switch_showmylocation"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:checkbox_item_title="@string/switch_showmylocation"
                app:checkbox_item_top_radius_enable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.cloudchewie.client.ui.CheckBoxItem
                android:id="@+id/switch_allowstrangermessages"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                app:checkbox_item_bottom_radius_enable="true"
                app:checkbox_item_title="@string/switch_allowstrangermessages"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_showmylocation" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/manage_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/general_privacy_layout">

            <com.cloudchewie.client.ui.SettingItem
                android:id="@+id/entry_blacklist"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:setting_item_left_icon_visibility="false"
                app:setting_item_title="@string/entry_blacklist"
                app:setting_item_top_radius_enable="true" />

            <com.cloudchewie.client.ui.SettingItem
                android:id="@+id/entry_uninterested"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entry_blacklist"
                app:setting_item_bottom_radius_enable="true"
                app:setting_item_left_icon_visibility="false"
                app:setting_item_title="@string/entry_uninterested" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>