<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.cloudchewie.ui.TitleBar
        android:id="@+id/settings_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:right_button_visibility="false"
        app:title="@string/activity_setting_title" />

    <com.scwang.smart.refresh.layout.SmartRefreshLayout
        android:id="@+id/settings_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settings_titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/settings_titlebar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_settings_general_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setting_item_left_icon="@drawable/ic_light_account"
                    app:setting_item_title="@string/entry_account"
                    app:setting_item_top_radius_enable="true" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_account"
                    app:setting_item_left_icon="@drawable/ic_light_remind"
                    app:setting_item_title="@string/entry_notification" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_notification"
                    app:setting_item_left_icon="@drawable/ic_light_password"
                    app:setting_item_title="@string/entry_privacy" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_general"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_privacy"
                    app:setting_item_bottom_radius_enable="true"
                    app:setting_item_left_icon="@drawable/ic_light_general"
                    app:setting_item_title="@string/entry_general" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_settings_operation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/activity_settings_general_layout">

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setting_item_left_icon="@drawable/ic_light_delete"
                    app:setting_item_tip="0 MB"
                    app:setting_item_tip_color="@color/color_gray"
                    app:setting_item_title="清除缓存"
                    app:setting_item_top_radius_enable="true" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_check_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_feedback"
                    app:setting_item_bottom_radius_enable="true"
                    app:setting_item_left_icon="@drawable/ic_light_operation"
                    app:setting_item_tip="1.0.0"
                    app:setting_item_tip_color="@color/color_gray"
                    app:setting_item_title="@string/entry_check_update" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_settings_profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/activity_settings_operation_layout">

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setting_item_left_icon="@drawable/ic_light_security"
                    app:setting_item_title="@string/entry_privacy_policy"
                    app:setting_item_top_radius_enable="true" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_service_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_privacy_policy"
                    app:setting_item_left_icon="@drawable/ic_light_service"
                    app:setting_item_title="@string/entry_service_terms" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_third_party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_service_terms"
                    app:setting_item_bottom_radius_enable="true"
                    app:setting_item_left_icon="@drawable/ic_light_third_party"
                    app:setting_item_title="@string/entry_third_party" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_settings_about_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/activity_settings_profile_layout">

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setting_item_bottom_radius_enable="true"
                    app:setting_item_left_icon="@drawable/ic_light_prompt"
                    app:setting_item_title="@string/entry_about"
                    app:setting_item_top_radius_enable="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activity_settings_close_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/activity_settings_about_layout">

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_close_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setting_item_left_icon_visibility="false"
                    app:setting_item_right_icon_visibility="false"
                    app:setting_item_title="@string/entry_close_app"
                    app:setting_item_title_color="@android:color/holo_red_light"
                    app:setting_item_top_radius_enable="true" />

                <com.cloudchewie.ui.SettingItem
                    android:id="@+id/entry_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/entry_close_app"
                    app:setting_item_bottom_radius_enable="true"
                    app:setting_item_left_icon_visibility="false"
                    app:setting_item_right_icon_visibility="false"
                    app:setting_item_title="@string/entry_logout"
                    app:setting_item_title_color="@android:color/holo_red_light" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</RelativeLayout>